--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
